--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
     "prettier": "^2.6.2",
-    "vite": "^2.9.7"
+    "vite": "^2.9.7",
+    "vite-plugin-eslint": "^1.6.0"
   }
 }
