--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.16",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
